# smoothmail

./: LICENSE  README.md  smoothmail.cabal
src/Data/Network/: Imap.hs  Mail.hs
src/Network/: Mail.hs
src/Network/Mail/: Imap.hs
src/Network/Mail/Imap/: Types.hs
test/Data/Network/: ImapSpec.hs
test/Network/Mail/: ImapSpec.hs  ImapStub.hs
