name:                smoothmail
version:             0.1.0.0
synopsis:            An attempt to provide a smooth mail DSL
-- description:         
homepage:            https://github.com/blackheaven/smoothmail
license:             OtherLicense
license-file:        LICENSE
author:              Gautier DI FOLCO
maintainer:          b@almostcorrect.eu
-- copyright:           
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  default-language:
      Haskell2010
  build-depends:
      base >=4.7 && <4.8
    , free == 4.10.*
  exposed-modules:
      Network.Mail
    , Network.Mail.Imap

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall
  hs-source-dirs:
      test
  default-language:
      Haskell2010
  main-is:
      Spec.hs
  build-depends:
      base >=4.7 && <4.8
    , smoothmail
    , hspec   == 2.*
